CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_XMLSAX "xmlsax" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_LZ4 "lz4" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_BOX2D "box2d" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_OGG "ogg" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_VORBIS "vorbis" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_THEORA "theora" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_ZLIB "zlib" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_SHA1 "sha1" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_UTF8 "utf8" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_GRAPHICS "graphics" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_POLY2TRI "poly2tri" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_CLIPPER2 "Clipper2" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_JPEG "libjpeg" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_PYTHON "python" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_WEBP "libwebp" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_SPINE "spine" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_STDEX "stdex" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_FE "libfe" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_DAZZLE "dazzle" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_OZZ "ozz" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_LIBMOVIE "libmovie" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_JSON "json" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_JANSSON "jansson" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_JPP "jpp" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_PUGIXML "pugixml" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_GOAP "GOAP" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_METABUF "metabuf" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_MATH "libmath" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_TINYINI "tinyini" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_FREETYPE "freetype" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_OPENSSL "openssl" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_SDL2 "SDL2" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_SDL3 "SDL3" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_OPENAL_SOFT "openal-soft" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_PNG "libpng" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_PYBIND "pybind" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_GLAD "glad" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_GLFW3 "glfw3" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_IMGUI "imgui" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_SENTRY "sentry" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_OPTICK "optick" ON)
MENGINE_ENABLE_DEPENDENCE(MENGINE_DEPENDENCE_RENDERDOC "renderdoc" ON)

PROJECT(Dependencies)

message("============@@##START##@@============")

if(MENGINE_DEPENDENCE_ZLIB)
    message("================zlib================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/zlib/CMakeLists.txt ${THIRDPARTY_DIR}/zlib/CMakeLists.txt COPYONLY)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/zlib/gzguts.h ${THIRDPARTY_DIR}/zlib/gzguts.h COPYONLY)
    
    set(ZLIB_BUILD_EXAMPLES OFF CACHE BOOL "ZLIB_BUILD_EXAMPLES" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/zlib ${THIRDPARTY_CONFIG_DIR}/zlib)
    
    set(ZLIB_LIBRARIES zlib CACHE STRING "ZLIB_LIBRARIES" FORCE)
    set(ZLIB_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/zlib" "${THIRDPARTY_DIR}/zlib" CACHE STRING "ZLIB_INCLUDE_DIRS" FORCE)
    
    set(ZLIB_LIBRARY ${ZLIB_LIBRARIES} CACHE STRING "ZLIB_LIBRARIES" FORCE)
    set(ZLIB_INCLUDE_DIR ${ZLIB_INCLUDE_DIRS} CACHE STRING "ZLIB_INCLUDE_DIRS" FORCE)
    
    message("ZLIB_LIBRARIES: ${ZLIB_LIBRARIES}")
    message("ZLIB_INCLUDE_DIRS: ${ZLIB_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_SHA1)
    message("================sha1================")
    set(SHA1_EXTERNAL_BUILD ON CACHE BOOL "SHA1_EXTERNAL_BUILD" FORCE)
    set(SHA1_INSTALL OFF CACHE BOOL "SHA1_INSTALL" FORCE)
    set(SHA1_BUILD_TEST OFF CACHE BOOL "SHA1_BUILD_TEST" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/sha1 ${THIRDPARTY_CONFIG_DIR}/sha1)
    
    set(SHA1_LIBRARIES sha1 CACHE STRING "SHA1_LIBRARIES" FORCE)
    set(SHA1_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/sha1" "${THIRDPARTY_DIR}/sha1" CACHE STRING "SHA1_INCLUDE_DIRS" FORCE)
    
    set(SHA1_LIBRARY ${SHA1_LIBRARIES} CACHE STRING "SHA1_LIBRARIES" FORCE)
    set(SHA1_INCLUDE_DIR ${SHA1_INCLUDE_DIRS} CACHE STRING "SHA1_INCLUDE_DIRS" FORCE)
    
    message("SHA1_LIBRARIES: ${SHA1_LIBRARIES}")
    message("SHA1_INCLUDE_DIRS: ${SHA1_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_UTF8)
    message("================utf8================")
    set(UTF8_BUILD_TESTS OFF CACHE BOOL "UTF8_BUILD_TESTS" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/utf8 ${THIRDPARTY_CONFIG_DIR}/utf8)
    
    set(UTF8_LIBRARIES utf8 CACHE STRING "UTF8_LIBRARIES" FORCE)
    set(UTF8_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/utf8" "${THIRDPARTY_DIR}/utf8" CACHE STRING "UTF8_INCLUDE_DIRS" FORCE)
    
    set(UTF8_LIBRARY ${UTF8_LIBRARIES} CACHE STRING "UTF8_LIBRARIES" FORCE)
    set(UTF8_INCLUDE_DIR ${UTF8_INCLUDE_DIRS} CACHE STRING "UTF8_INCLUDE_DIRS" FORCE)
    
    message("UTF8_LIBRARIES: ${UTF8_LIBRARIES}")
    message("UTF8_INCLUDE_DIRS: ${UTF8_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_GRAPHICS)
    message("================graphics================")
    
    set(GRAPHICS_EXTERNAL_BUILD ON CACHE BOOL "GRAPHICS_EXTERNAL_BUILD" FORCE)
    set(GRAPHICS_EXAMPLES_BUILD OFF CACHE BOOL "GRAPHICS_EXAMPLES_BUILD" FORCE)
    set(GRAPHICS_INSTALL OFF CACHE BOOL "GRAPHICS_INSTALL" FORCE)
    set(GRAPHICS_TESTS OFF CACHE BOOL "GRAPHICS_TESTS" FORCE)
    set(GRAPHICS_TESTS_IN_SOLUTIONS OFF CACHE BOOL "GRAPHICS_TESTS_IN_SOLUTIONS" FORCE)
    
    IF(MENGINE_RENDER_DIRECTX9)
        set(GRAPHICS_BGRA OFF CACHE BOOL "GRAPHICS_BGRA" FORCE)
    ELSEIF(MENGINE_RENDER_DIRECTX11)
        set(GRAPHICS_BGRA ON CACHE BOOL "GRAPHICS_BGRA" FORCE)
    ELSE()
        set(GRAPHICS_BGRA ON CACHE BOOL "GRAPHICS_BGRA" FORCE)
    ENDIF()
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/graphics ${THIRDPARTY_CONFIG_DIR}/graphics)
endif()

if(MENGINE_DEPENDENCE_JSON)
    message("================json================")
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/json ${THIRDPARTY_CONFIG_DIR}/json)
endif()

if(MENGINE_DEPENDENCE_JANSSON)
    message("================jansson================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/jansson/CMakeLists.txt ${THIRDPARTY_DIR}/jansson/CMakeLists.txt COPYONLY)
    
    set(JANSSON_BUILD_SHARED_LIBS OFF CACHE BOOL "JANSSON_BUILD_SHARED_LIBS" FORCE)
    set(USE_URANDOM OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(USE_WINDOWS_CRYPTOAPI OFF CACHE BOOL "USE_WINDOWS_CRYPTOAPI" FORCE)
    set(JANSSON_STATIC_CRT ${MENGINE_STATIC_CRT} CACHE BOOL "JANSSON_STATIC_CRT" FORCE)
    set(JANSSON_EXAMPLES OFF CACHE BOOL "JANSSON_EXAMPLES" FORCE)
    set(JANSSON_BUILD_DOCS OFF CACHE BOOL "JANSSON_BUILD_DOCS" FORCE)
    set(JANSSON_WITHOUT_TESTS ON CACHE BOOL "JANSSON_WITHOUT_TESTS" FORCE)
    set(JANSSON_INSTALL OFF CACHE BOOL "JANSSON_INSTALL" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/jansson ${THIRDPARTY_CONFIG_DIR}/jansson)
    
    set(JANNSON_LIBRARIES ${THIRDPARTY_LIB_DIR}/${MENGINE_LIB_PREFIX}jansson${MENGINE_LIB_SUFFIX} CACHE STRING "JANNSON_LIBRARY" FORCE)
    set(JANSSON_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/jansson/include" CACHE STRING "JANSSON_INCLUDE_DIRS" FORCE)
    
    set(JANNSON_LIBRARY ${JANNSON_LIBRARIES} CACHE STRING "JANNSON_LIBRARY" FORCE)
    set(JANSSON_INCLUDE_DIR ${JANSSON_INCLUDE_DIRS} CACHE STRING "JANSSON_INCLUDE_DIR" FORCE)
    
    message("JANNSON_LIBRARIES: ${JANNSON_LIBRARIES}")
    message("JANSSON_INCLUDE_DIRS: ${JANSSON_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_DAZZLE)
    message("================dazzle================")
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/dazzle ${THIRDPARTY_CONFIG_DIR}/dazzle)
endif()

if(MENGINE_DEPENDENCE_BOX2D)
    message("================box2d================")
    
    SET(BOX2D_SAMPLES OFF CACHE BOOL "BOX2D_SAMPLES" FORCE)
    SET(BOX2D_BENCHMARKS OFF CACHE BOOL "BOX2D_BENCHMARKS" FORCE)
    SET(BOX2D_DOCS OFF CACHE BOOL "BOX2D_DOCS" FORCE)
    SET(BOX2D_PROFILE OFF CACHE BOOL "BOX2D_PROFILE" FORCE)
    SET(BOX2D_VALIDATE OFF CACHE BOOL "BOX2D_VALIDATE" FORCE)
    SET(BOX2D_UNIT_TESTS OFF CACHE BOOL "BOX2D_UNIT_TESTS" FORCE)
    SET(BOX2D_COMPILE_WARNING_AS_ERROR OFF CACHE BOOL "BOX2D_COMPILE_WARNING_AS_ERROR" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/box2d ${THIRDPARTY_CONFIG_DIR}/box2d)
endif()

if(MENGINE_DEPENDENCE_LZ4)
    message("================lz4================")
    ADD_SUBDIRECTORY(lz4 ${THIRDPARTY_CONFIG_DIR}/lz4)
endif()

if(MENGINE_DEPENDENCE_OGG)
    message("================libogg================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/libogg/Modified/os_types.h ${THIRDPARTY_DIR}/libogg/include/ogg/os_types.h COPYONLY)

    SET(BUILD_SHARED_LIBS OFF CACHE BOOL "BUILD_SHARED_LIBS" FORCE)
    SET(INSTALL_DOCS OFF CACHE BOOL "BUILD_SHARED_LIBS" FORCE)
    SET(INSTALL_PKG_CONFIG_MODULE OFF CACHE BOOL "INSTALL_PKG_CONFIG_MODULE" FORCE)
    SET(INSTALL_CMAKE_PACKAGE_MODULE OFF CACHE BOOL "INSTALL_CMAKE_PACKAGE_MODULE" FORCE)
    SET(BUILD_TESTING OFF CACHE BOOL "INSTALL_CMAKE_PACKAGE_MODULE" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libogg ${THIRDPARTY_CONFIG_DIR}/libogg)
    
    set(OGG_LIBRARIES ogg CACHE STRING "OGG_LIBRARIES" FORCE)
    set(OGG_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/libogg/include" "${THIRDPARTY_DIR}/libogg/include" CACHE STRING "OGG_INCLUDE_DIRS" FORCE)
    
    set(OGG_LIBRARY ${OGG_LIBRARIES} CACHE STRING "OGG_LIBRARY" FORCE)
    set(OGG_INCLUDE_DIR ${OGG_INCLUDE_DIRS} CACHE STRING "OGG_INCLUDE_DIR" FORCE)
    
    message("OGG_LIBRARIES: ${OGG_LIBRARIES}")
    message("OGG_INCLUDE_DIRS: ${OGG_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_VORBIS)
    message("================libvorbis================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/libvorbis/CMakeLists.txt ${THIRDPARTY_DIR}/libvorbis/CMakeLists.txt COPYONLY)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libvorbis ${THIRDPARTY_CONFIG_DIR}/libvorbis)
endif()

if(MENGINE_DEPENDENCE_THEORA)
    message("================libtheora================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/libtheora/lib/encoder_disabled.c ${THIRDPARTY_DIR}/libtheora/lib/encoder_disabled.c COPYONLY)
    
    ADD_SUBDIRECTORY(libtheora ${THIRDPARTY_CONFIG_DIR}/libtheora)
endif()


if(MENGINE_DEPENDENCE_POLY2TRI)
    message("================poly2tri================")
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/poly2tri ${THIRDPARTY_CONFIG_DIR}/poly2tri)
endif()

if(MENGINE_DEPENDENCE_CLIPPER2)
    message("================Clipper2================")
    SET(CLIPPER2_UTILS OFF CACHE BOOL "CLIPPER2_UTILS" FORCE)
    SET(CLIPPER2_EXAMPLES OFF CACHE BOOL "CLIPPER2_EXAMPLES" FORCE)
    SET(CLIPPER2_TESTS OFF CACHE BOOL "CLIPPER2_TESTS" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/Clipper2/CPP ${THIRDPARTY_CONFIG_DIR}/Clipper2)
endif()

if(MENGINE_DEPENDENCE_PNG)
    message("================libpng================")
    set(PNG_BUILD_ZLIB OFF CACHE BOOL "PNG_BUILD_ZLIB" FORCE)
    set(PNG_SHARED OFF CACHE BOOL "PNG_SHARED" FORCE)
    set(PNG_STATIC ON CACHE BOOL "PNG_STATIC" FORCE)
    set(PNG_TESTS OFF CACHE BOOL "PNG_TESTS" FORCE)
	set(PNG_TOOLS OFF CACHE BOOL "PNG_TOOLS" FORCE)
    set(PNG_FRAMEWORK OFF CACHE BOOL "PNG_FRAMEWORK" FORCE)
    set(PNG_DEBUG OFF CACHE BOOL "PNG_DEBUG" FORCE)
    set(PNGARG OFF CACHE BOOL "PNGARG" FORCE)
    
    set(PNG_HARDWARE_OPTIMIZATIONS ON CACHE BOOL "PNG_HARDWARE_OPTIMIZATIONS" FORCE)
    set(SKIP_INSTALL_ALL ON CACHE BOOL "SKIP_INSTALL_ALL" FORCE)
    
    set(PNG_STATIC_OUTPUT_NAME "png" CACHE STRING "PNG_STATIC_OUTPUT_NAME" FORCE)
    set(PNG_DEBUG_POSTFIX "" CACHE STRING "PNG_DEBUG_POSTFIX" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libpng ${THIRDPARTY_CONFIG_DIR}/libpng)
    add_dependencies(png_static zlib)
    
    if(UNIX)
        set(PNG_LIBRARIES ${CMAKE_STATIC_LIBRARY_PREFIX}png16${MENGINE_LIB_SUFFIX} CACHE STRING "PNG_LIBRARIES" FORCE)
    else()
        set(PNG_LIBRARIES libpng16_static${MENGINE_LIB_SUFFIX} CACHE STRING "PNG_LIBRARIES" FORCE)
    endif()
    
    set(PNG_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/libpng" "${THIRDPARTY_DIR}/libpng" CACHE STRING "PNG_INCLUDE_DIRS" FORCE)
    
    set(PNG_LIBRARY ${PNG_LIBRARIES} CACHE STRING "PNG_LIBRARY" FORCE)
    set(PNG_INCLUDE_DIR ${PNG_INCLUDE_DIRS} CACHE STRING "PNG_INCLUDE_DIR" FORCE)
        
    message("PNG_LIBRARIES: ${PNG_LIBRARIES}")
    message("PNG_INCLUDE_DIRS: ${PNG_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_JPEG)
    message("================libjpeg================")
    ADD_SUBDIRECTORY(libjpeg ${THIRDPARTY_CONFIG_DIR}/libjpeg)
    
    set(JPEG_LIBRARIES ${MENGINE_LIB_PREFIX}jpeg${MENGINE_DEPENDENCIES_DEBUG_SUFFIX}${MENGINE_LIB_SUFFIX} CACHE STRING "JPEG_LIBRARIES" FORCE)    
    set(JPEG_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/libjpeg" "${THIRDPARTY_DIR}/libjpeg" CACHE STRING "JPEG_INCLUDE_DIRS" FORCE)
    
    set(JPEG_LIBRARY ${JPEG_LIBRARIES} CACHE STRING "JPEG_LIBRARY" FORCE)
    set(JPEG_INCLUDE_DIR ${JPEG_INCLUDE_DIRS} CACHE STRING "JPEG_INCLUDE_DIR" FORCE)
    
    message("JPEG_LIBRARIES: ${JPEG_LIBRARIES}")
    message("JPEG_INCLUDE_DIRS: ${JPEG_INCLUDE_DIRS}")
endif()


if(MENGINE_DEPENDENCE_PYTHON)
    message("================python================")
    ADD_SUBDIRECTORY(python ${THIRDPARTY_CONFIG_DIR}/python)
endif()

if(MENGINE_DEPENDENCE_XMLSAX)
    message("================xmlsax================")
    set(XMLSAX_EXTERNAL_BUILD ON CACHE BOOL "XMLSAX_EXTERNAL_BUILD" FORCE)
    set(XMLSAX_INSTALL OFF CACHE BOOL "XMLSAX_INSTALL" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/xmlsax ${THIRDPARTY_CONFIG_DIR}/xmlsax)
endif()

if(MENGINE_DEPENDENCE_WEBP)
    message("================libwebp================")
    
    configure_file(${CMAKE_CURRENT_LIST_DIR}/libwebp/CMakeLists.txt ${THIRDPARTY_DIR}/libwebp/CMakeLists.txt COPYONLY)
    
    set(PNG_PNG_INCLUDE_DIR ${PNG_INCLUDE_DIRS} CACHE STRING "PNG_PNG_INCLUDE_DIR" FORCE)
    
    set(WEBP_LINK_STATIC ON CACHE BOOL "Link using static libraries. If OFF, use dynamic libraries." FORCE)
    set(WEBP_ENABLE_SIMD ON CACHE BOOL "Enable any SIMD optimization." FORCE)
    set(WEBP_BUILD_ANIM_UTILS OFF CACHE BOOL "WEBP_BUILD_ANIM_UTILS" FORCE)
    set(WEBP_BUILD_CWEBP OFF CACHE BOOL "Build the cwebp command line tool." FORCE)
    set(WEBP_BUILD_DWEBP OFF CACHE BOOL "Build the dwebp command line tool." FORCE)
    set(WEBP_BUILD_GIF2WEBP OFF CACHE BOOL "Build the gif2webp conversion tool." FORCE)
    set(WEBP_BUILD_IMG2WEBP OFF CACHE BOOL "Build the img2webp animation tool." FORCE)
    set(WEBP_BUILD_VWEBP OFF CACHE BOOL "Build the vwebp viewer tool." FORCE)
    set(WEBP_BUILD_WEBPINFO OFF CACHE BOOL "Build the webpinfo command line tool." FORCE)
    set(WEBP_BUILD_WEBPMUX OFF CACHE BOOL "Build the webpinfo command line tool." FORCE)
    set(WEBP_BUILD_EXTRAS OFF CACHE BOOL "Build extras." FORCE)
    set(WEBP_BUILD_WEBP_JS OFF CACHE BOOL "Emscripten build of webp.js" FORCE)
    set(WEBP_USE_THREAD OFF CACHE BOOL "Enable threading support" FORCE)
    set(WEBP_NEAR_LOSSLESS OFF CACHE BOOL "Enable near-lossless encoding" FORCE)
    set(WEBP_ENABLE_SWAP_16BIT_CSP OFF CACHE BOOL "Enable byte swap for 16 bit colorspaces." FORCE)
    set(WEBP_UNICODE OFF CACHE BOOL "Build Unicode executables." FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libwebp ${THIRDPARTY_CONFIG_DIR}/libwebp)
endif()

if(MENGINE_DEPENDENCE_SPINE)
    message("================spine================")
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/spine/spine-c ${THIRDPARTY_CONFIG_DIR}/spine-c)
endif() 

if(MENGINE_DEPENDENCE_STDEX)
    message("================stdex================")
    set(STDEX_EXTERNAL_BUILD ON CACHE BOOL "STDEX_EXTERNAL_BUILD" FORCE)
    set(STDEX_INSTALL OFF CACHE BOOL "STDEX_EXTERNAL_BUILD" FORCE)
    set(STDEX_DBGHELP_INCLUDE "${MENGINE_REPOSITORY}/src/Environment/Windows" CACHE STRING "STDEX_DBGHELP_INCLUDE" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/stdex ${THIRDPARTY_CONFIG_DIR}/stdex)
endif()

if(MENGINE_DEPENDENCE_FE)
    message("================libfe================")
    set(FE_EXTERNAL_BUILD ON CACHE BOOL "FE_EXTERNAL_BUILD" FORCE)
    set(FE_TEST_BUILD OFF CACHE BOOL "FE_TEST_BUILD" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libfe ${THIRDPARTY_CONFIG_DIR}/libfe)
endif()

if(MENGINE_DEPENDENCE_OZZ)
message("================ozz================")
    set(ozz_build_tools OFF CACHE BOOL "ozz_build_tools" FORCE)
    set(ozz_build_fbx OFF CACHE BOOL "ozz_build_fbx" FORCE)
    set(ozz_build_gltf OFF CACHE BOOL "ozz_build_gltf" FORCE)
    set(ozz_build_data OFF CACHE BOOL "ozz_build_data" FORCE)
    set(ozz_build_samples OFF CACHE BOOL "ozz_build_samples" FORCE)
    set(ozz_build_howtos OFF CACHE BOOL "ozz_build_howtos" FORCE)
    set(ozz_build_tests OFF CACHE BOOL "ozz_build_tests" FORCE)
    set(ozz_build_simd_ref OFF CACHE BOOL "ozz_build_simd_ref" FORCE)
    set(ozz_build_cpp11 ON CACHE BOOL "ozz_build_cpp11" FORCE)
    set(ozz_build_msvc_rt_dll ${MENGINE_DYNAMIC_CRT} CACHE BOOL "ozz_build_msvc_rt_dll" FORCE)
    set(ozz_build_postfix OFF CACHE BOOL "ozz_build_postfix" FORCE)
    set(ozz_run_tests_headless OFF CACHE BOOL "ozz_run_tests_headless" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/ozz ${THIRDPARTY_CONFIG_DIR}/ozz)
endif()

if(MENGINE_DEPENDENCE_LIBMOVIE)
    message("================libmovie================")
    set(LIBMOVIE_EXTERNAL_BUILD ON CACHE BOOL "LIBMOVIE_EXTERNAL_BUILD" FORCE)
    set(LIBMOVIE_EXAMPLES_BUILD OFF CACHE BOOL "LIBMOVIE_EXAMPLES_BUILD" FORCE)
    set(LIBMOVIE_COVERAGE OFF CACHE BOOL "LIBMOVIE_COVERAGE" FORCE)
    set(LIBMOVIE_INSTALL OFF CACHE BOOL "LIBMOVIE_INSTALL" FORCE)
    set(LIBMOVIE_TEST OFF CACHE BOOL "LIBMOVIE_TEST" FORCE)
    set(LIBMOVIE_MEMORY_DEBUG OFF CACHE BOOL "LIBMOVIE_MEMORY_DEBUG" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libmovie ${THIRDPARTY_CONFIG_DIR}/libmovie)
endif()

if(MENGINE_DEPENDENCE_JPP)
    message("================jpp================")
    set(JPP_EXTERNAL_BUILD ON CACHE BOOL "JPP_EXTERNAL_BUILD" FORCE)
    set(JPP_JANSSON_INCLUDE_PATH ${JANSSON_INCLUDE_DIRS} CACHE STRING "JPP_JANSSON_INCLUDE_PATH" FORCE)
    set(JPP_TEST OFF CACHE BOOL "JPP_TEST" FORCE)
    set(JPP_INSTALL OFF CACHE BOOL "JPP_INSTALL" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/jpp ${THIRDPARTY_CONFIG_DIR}/jpp)
    add_dependencies(jpp jansson)
endif()

if(MENGINE_DEPENDENCE_PUGIXML)
    message("================pugixml================")
    set(BUILD_SHARED_LIBS OFF CACHE STRING "BUILD_SHARED_LIBS" FORCE)
    set(BUILD_TESTS OFF CACHE BOOL "BUILD_TESTS" FORCE)
    set(USE_VERSIONED_LIBDIR OFF CACHE STRING "USE_VERSIONED_LIBDIR" FORCE)
    set(STATIC_CRT ${MENGINE_STATIC_CRT} CACHE STRING "STATIC_CRT" FORCE)
    set(USE_POSTFIX OFF CACHE STRING "USE_POSTFIX" FORCE)
    set(BUILD_DEFINES "PUGIXML_NO_XPATH" CACHE STRING "BUILD_DEFINES" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/pugixml ${THIRDPARTY_CONFIG_DIR}/pugixml)
endif()

if(MENGINE_DEPENDENCE_GOAP)
    message("================GOAP================")
    set(LIBGOAP_EXTERNAL_BUILD ON CACHE BOOL "LIBGOAP_EXTERNAL_BUILD" FORCE)
    set(LIBGOAP_BUILD_TEST OFF CACHE BOOL "LIBGOAP_BUILD_TEST" FORCE)
    set(LIBGOAP_EXTERNAL_CONFIG_INCLUDE ON CACHE BOOL "LIBGOAP_EXTERNAL_CONFIG_INCLUDE" FORCE)
    set(LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH ${THIRDPARTY_DIR}/stdex/include ${CMAKE_CURRENT_LIST_DIR}/GOAP/Config CACHE STRING "LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/GOAP ${THIRDPARTY_CONFIG_DIR}/GOAP)
endif()

if(MENGINE_DEPENDENCE_METABUF)
    message("================metabuf================")
    set(METABUF_EXTERNAL_BUILD ON CACHE BOOL "METABUF_EXTERNAL_BUILD" FORCE)
    set(METABUF_TEST OFF CACHE BOOL "METABUF_TEST" FORCE)
    set(METABUF_METAGEN OFF CACHE BOOL "METABUF_METAGEN" FORCE)
    set(METABUF_XML2METABUF ON CACHE BOOL "METABUF_XML2METABUF" FORCE)

    SET(METABUF_PUGIXML_EXTERNAL ON CACHE BOOL "METABUF_PUGIXML_EXTERNAL" FORCE)
    SET(METABUF_PUGIXML_INCLUDE_DIRS "${THIRDPARTY_DIR}/pugixml/src" CACHE STRING "METABUF_PUGIXML_INCLUDE_DIRS" FORCE)
    SET(METABUF_PUGIXML_LIBRARIES ${THIRDPARTY_LIB_DIR}/${MENGINE_LIB_PREFIX}pugixml${MENGINE_LIB_SUFFIX} CACHE STRING "METABUF_PUGIXML_LIBRARIES" FORCE)
    SET(METABUF_EXTERNAL_CONFIG ON CACHE BOOL "METABUF_EXTERNAL_CONFIG" FORCE)

    configure_file(${CMAKE_CURRENT_LIST_DIR}/metabuf/Metaexternalconfig.hpp ${THIRDPARTY_DIR}/metabuf/include/config/Metaexternalconfig.hpp COPYONLY)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/metabuf ${THIRDPARTY_CONFIG_DIR}/metabuf)
    add_dependencies(metabuf pugixml)
endif()

if(MENGINE_DEPENDENCE_MATH)
    message("================libmath================")
    set(LIBMATH_EXTERNAL_BUILD ON CACHE BOOL "LIBMATH_EXTERNAL_BUILD" FORCE)
    set(LIBMATH_EXAMPLES_BUILD OFF CACHE BOOL "LIBMATH_EXAMPLES_BUILD" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libmath ${THIRDPARTY_CONFIG_DIR}/libmath)
endif()

if(MENGINE_DEPENDENCE_TINYINI)
    message("================tinyini================")
    set(TINYINI_EXTERNAL_BUILD ON CACHE BOOL "TINYINI_EXTERNAL_BUILD" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/tinyini ${THIRDPARTY_CONFIG_DIR}/tinyini)
endif()

if(MENGINE_DEPENDENCE_FREETYPE)
    message("================freetype================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/freetype/CMakeLists.txt ${THIRDPARTY_DIR}/freetype/CMakeLists.txt COPYONLY)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/freetype/ftstdlib.h ${THIRDPARTY_DIR}/freetype/include/freetype/config/ftstdlib.h COPYONLY)
    
    set(SKIP_INSTALL_ALL ON CACHE BOOL "SKIP_INSTALL_ALL" FORCE)
    set(DISABLE_FORCE_DEBUG_POSTFIX ON CACHE BOOL "DISABLE_FORCE_DEBUG_POSTFIX" FORCE)
    set(BUILD_SHARED_LIBS OFF CACHE BOOL "BUILD_SHARED_LIBS" FORCE)

    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS_SIMULATOR)
        set(IOS_PLATFORM "OS" CACHE STRING "IOS_PLATFORM" FORCE)
    endif()

    set(FT_WITH_ZLIB OFF CACHE BOOL "FT_WITH_ZLIB" FORCE)
    set(FT_WITH_BZIP2 OFF CACHE BOOL "FT_WITH_BZIP2" FORCE)
    set(FT_WITH_PNG OFF CACHE BOOL "FT_WITH_PNG" FORCE)
    set(FT_WITH_HARFBUZZ OFF CACHE BOOL "FT_WITH_HARFBUZZ" FORCE)
    set(FT_WITH_BROTLI OFF CACHE BOOL "FT_WITH_BROTLI" FORCE)
    
    set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB_OLD ${CMAKE_DISABLE_FIND_PACKAGE_ZLIB})
    set(CMAKE_DISABLE_FIND_PACKAGE_BZip2_OLD ${CMAKE_DISABLE_FIND_PACKAGE_BZip2})
    set(CMAKE_DISABLE_FIND_PACKAGE_PNG_OLD ${CMAKE_DISABLE_FIND_PACKAGE_PNG})
    set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz_OLD ${CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz})
    set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec_OLD ${CMAKE_DISABLE_FIND_PACKAGE_BrotliDec})
    
    set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_ZLIB" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BZip2 ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BZip2" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_PNG ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_PNG" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BrotliDec" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/freetype ${THIRDPARTY_CONFIG_DIR}/freetype)
    
    set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB ${CMAKE_DISABLE_FIND_PACKAGE_ZLIB_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_ZLIB" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BZip2 ${CMAKE_DISABLE_FIND_PACKAGE_BZip2_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BZip2" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_PNG ${CMAKE_DISABLE_FIND_PACKAGE_PNG_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_PNG" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz ${CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec ${CMAKE_DISABLE_FIND_PACKAGE_BrotliDec_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BrotliDec" FORCE)
    
    add_dependencies(freetype zlib)
    
    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS)
        unset(IOS_PLATFORM CACHE)
    endif()
endif()

if(MENGINE_TARGET_WINDOWS OR MENGINE_TARGET_UNIX)
    if(MENGINE_DEPENDENCE_SENTRY)
        message("================sentry================")

        set(SENTRY_BUILD_SHARED_LIBS OFF CACHE BOOL "SENTRY_BUILD_SHARED_LIBS" FORCE)
        set(SENTRY_BUILD_TESTS OFF CACHE BOOL "SENTRY_BUILD_TESTS" FORCE)
        set(SENTRY_BUILD_EXAMPLES OFF CACHE BOOL "SENTRY_BUILD_EXAMPLES" FORCE)
        set(SENTRY_ENABLE_INSTALL OFF CACHE BOOL "SENTRY_ENABLE_INSTALL" FORCE)
        set(SENTRY_INTEGRATION_QT OFF CACHE BOOL "SENTRY_INTEGRATION_QT" FORCE)
        set(CRASHPAD_ZLIB_SYSTEM OFF CACHE BOOL "CRASHPAD_ZLIB_SYSTEM" FORCE)
        
        if(MSVC)
            set(SENTRY_BUILD_RUNTIMESTATIC ${MENGINE_STATIC_CRT} CACHE BOOL "SENTRY_BUILD_RUNTIMESTATIC" FORCE)
        endif()
        
        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/sentry ${THIRDPARTY_CONFIG_DIR}/sentry)
    endif()
endif()

if(MENGINE_TARGET_WINDOWS AND MENGINE_TOOLCHAIN_MSVC)
    if(MENGINE_DEPENDENCE_OPTICK)
        message("================optick================")
        configure_file(${CMAKE_CURRENT_LIST_DIR}/optick/CMakeLists.txt ${THIRDPARTY_DIR}/optick/CMakeLists.txt COPYONLY)

        set(OPTICK_ENABLED ON CACHE BOOL "OPTICK_ENABLED" FORCE)
        set(OPTICK_INSTALL_TARGETS OFF CACHE BOOL "OPTICK_INSTALL_TARGETS" FORCE)
        set(OPTICK_USE_VULKAN OFF CACHE BOOL "OPTICK_USE_VULKAN" FORCE)
        set(OPTICK_USE_D3D12 OFF CACHE BOOL "OPTICK_USE_D3D12" FORCE)
        set(OPTICK_BUILD_GUI_APP OFF CACHE BOOL "OPTICK_USE_D3D12" FORCE)
        set(OPTICK_BUILD_CONSOLE_SAMPLE OFF CACHE BOOL "OPTICK_USE_D3D12" FORCE)

        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/optick ${THIRDPARTY_CONFIG_DIR}/optick)
    endif()
endif()

if(MENGINE_DEPENDENCE_SDL2)
    message("================SDL2================")
    configure_file(${CMAKE_CURRENT_LIST_DIR}/SDL2/SDL2Config.cmake.in ${THIRDPARTY_DIR}/SDL2/SDL2Config.cmake.in COPYONLY)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/SDL2/src/SDL_error.c ${THIRDPARTY_DIR}/SDL2/src/SDL_error.c COPYONLY)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/SDL2/include/SDL_error.h ${THIRDPARTY_DIR}/SDL2/include/SDL_error.h COPYONLY)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/SDL2/src/dynapi/SDL_dynapi_procs.h ${THIRDPARTY_DIR}/SDL2/src/dynapi/SDL_dynapi_procs.h COPYONLY)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/SDL2/src/dynapi/SDL_dynapi_overrides.h ${THIRDPARTY_DIR}/SDL2/src/dynapi/SDL_dynapi_overrides.h COPYONLY)
    configure_file(${CMAKE_CURRENT_LIST_DIR}/SDL2/src/video/uikit/SDL_uikitwindow.m ${THIRDPARTY_DIR}/SDL2/src/video/uikit/SDL_uikitwindow.m COPYONLY)
    
    set(SDL_CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Name suffix for debug builds" FORCE)
    
    SET(SDL2_DISABLE_INSTALL ON CACHE BOOL "Disable installation of SDL2" FORCE)
    SET(SDL2_DISABLE_UNINSTALL ON CACHE BOOL "Disable installation of SDL2" FORCE)
    SET(SDL_INSTALL_CMAKEDIR "${THIRDPARTY_CONFIG_DIR}/SDL2" CACHE STRING "Location where to install SDL2Config.cmake" FORCE)
    
    if(MENGINE_TOOLCHAIN_MSVC)
        set(SDL_FORCE_STATIC_VCRT ${MENGINE_STATIC_CRT} CACHE BOOL "Force /MT for static VC runtimes" FORCE)
    endif()
    
    if(MENGINE_TARGET_UWP)
        set(WINDOWS_STORE ON CACHE BOOL "WINDOWS_STORE" FORCE)
        set(HAVE_SENSORSAPI_H OFF CACHE BOOL "HAVE_SENSORSAPI_H" FORCE)
    endif()
    
    if(MENGINE_TARGET_UWP)
        set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
    endif()

    if(MENGINE_TARGET_WINDOWS)
        set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
    endif()
    
    if(MENGINE_TARGET_ANDROID)
        set(SDL_SHARED ON CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC OFF CACHE BOOL "Build a static version of the library" FORCE)
    endif()

    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS_SIMULATOR)
        set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
    endif()

    if(MENGINE_TARGET_MACOS)
        set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
    endif()
    
    if(MENGINE_TARGET_UNIX)
        set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
    endif()

    set(SDL_JOYSTICK ON CACHE BOOL "SDL_JOYSTICK" FORCE)
    set(SDL_JOYSTICK_ENABLED_BY_DEFAULT ON CACHE BOOL "SDL_JOYSTICK_ENABLED_BY_DEFAULT" FORCE)
    set(SDL_HAPTIC ON CACHE BOOL "SDL_HAPTIC" FORCE)
    set(SDL_HAPTIC_ENABLED_BY_DEFAULT ON CACHE BOOL "SDL_HAPTIC_ENABLED_BY_DEFAULT" FORCE)
    set(SDL_POWER ON CACHE BOOL "SDL_POWER" FORCE)
    set(SDL_POWER_ENABLED_BY_DEFAULT ON CACHE BOOL "SDL_POWER_ENABLED_BY_DEFAULT" FORCE)
    set(SDL_SHARED_ENABLED_BY_DEFAULT OFF CACHE BOOL "Build a shared version of the library" FORCE)
    set(SDL_STATIC_ENABLED_BY_DEFAULT ON CACHE BOOL "Build a static version of the library" FORCE)
    set(SDL_TEST_ENABLED_BY_DEFAULT OFF CACHE BOOL "SDL_TEST_ENABLED_BY_DEFAULT" FORCE)

    set(SDL_LIBC ON CACHE BOOL "SDL_LIBC" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/SDL2 ${THIRDPARTY_CONFIG_DIR}/SDL2)
    
    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS_SIMULATOR)
        target_compile_definitions(SDL2-static PUBLIC -DSDL_MAIN_HANDLED)
    endif()

    set(SDL2_DIR "${THIRDPARTY_CONFIG_DIR}/SDL2" CACHE STRING "SDL2_DIR" FORCE)
    
    if(MENGINE_TARGET_UWP)
        set(SDL2_LIBRARIES ${MENGINE_LIB_PREFIX}SDL2-static${MENGINE_LIB_SUFFIX} CACHE STRING "SDL2_LIBRARIES" FORCE)
    endif()
    
    set(SDL2_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/SDL2/include/include-config-$<LOWER_CASE:$<CONFIG>>" "${THIRDPARTY_CONFIG_DIR}/SDL2/include" "${THIRDPARTY_DIR}/SDL2/include" CACHE STRING "SDL2_INCLUDE_DIRS" FORCE)
    
    set(SDL2_LIBRARY ${SDL2_LIBRARIES} CACHE STRING "SDL2_LIBRARY" FORCE)
    set(SDL2_INCLUDE_DIR ${SDL2_INCLUDE_DIR} CACHE STRING "SDL2_INCLUDE_DIR" FORCE)
endif()

if(MENGINE_DEPENDENCE_SDL3)
    message("================SDL3================")
    
    SET(SDL3_DISABLE_INSTALL ON CACHE BOOL "Disable installation of SDL3" FORCE)
    SET(SDL3_DISABLE_UNINSTALL ON CACHE BOOL "Disable installation of SDL3" FORCE)
    SET(SDL_TEST_LIBRARY OFF CACHE BOOL "Build the SDL3_test library" FORCE)
    
    SET(SDL_INSTALL_CMAKEDIR "${THIRDPARTY_CONFIG_DIR}/SDL3" CACHE STRING "Location where to install SDL3Config.cmake" FORCE)
    
    if(MENGINE_TOOLCHAIN_MSVC)
        set(SDL_FORCE_STATIC_VCRT ${MENGINE_STATIC_CRT} CACHE BOOL "Force /MT for static VC runtimes" FORCE)
    endif()
    
    if(MENGINE_TARGET_UWP)
        set(WINDOWS_STORE ON CACHE BOOL "WINDOWS_STORE" FORCE)
        set(HAVE_SENSORSAPI_H OFF CACHE BOOL "HAVE_SENSORSAPI_H" FORCE)
    endif()
    
    if(MENGINE_TARGET_UWP)
        set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
    endif()

    if(MENGINE_TARGET_WINDOWS)
        set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
    endif()
    
    if(MENGINE_TARGET_ANDROID)
        set(SDL_SHARED ON CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC OFF CACHE BOOL "Build a static version of the library" FORCE)
    endif()

    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS_SIMULATOR)
        set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
    endif()

    if(MENGINE_TARGET_MACOS)
        set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
    endif()
    
    if(MENGINE_TARGET_UNIX)
        set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
        set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
    endif()

    set(SDL_JOYSTICK ON CACHE BOOL "SDL_JOYSTICK" FORCE)
    set(SDL_JOYSTICK_ENABLED_BY_DEFAULT ON CACHE BOOL "SDL_JOYSTICK_ENABLED_BY_DEFAULT" FORCE)
    set(SDL_HAPTIC ON CACHE BOOL "SDL_HAPTIC" FORCE)
    set(SDL_HAPTIC_ENABLED_BY_DEFAULT ON CACHE BOOL "SDL_HAPTIC_ENABLED_BY_DEFAULT" FORCE)
    set(SDL_POWER ON CACHE BOOL "SDL_POWER" FORCE)
    set(SDL_POWER_ENABLED_BY_DEFAULT ON CACHE BOOL "SDL_POWER_ENABLED_BY_DEFAULT" FORCE)
    set(SDL_SHARED_ENABLED_BY_DEFAULT OFF CACHE BOOL "Build a shared version of the library" FORCE)
    set(SDL_STATIC_ENABLED_BY_DEFAULT ON CACHE BOOL "Build a static version of the library" FORCE)
    set(SDL_TEST_ENABLED_BY_DEFAULT OFF CACHE BOOL "SDL_TEST_ENABLED_BY_DEFAULT" FORCE)

    set(SDL_LIBC ON CACHE BOOL "SDL_LIBC" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/SDL3 ${THIRDPARTY_CONFIG_DIR}/SDL3)
    
    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS_SIMULATOR)
        if(TARGET SDL3-static)
            target_compile_definitions(SDL3-static PUBLIC -DSDL_MAIN_HANDLED)
        endif()
    endif()

    set(SDL3_DIR "${THIRDPARTY_CONFIG_DIR}/SDL3" CACHE STRING "SDL3_DIR" FORCE)
    
    if(TARGET SDL3-static)
        set(SDL3_LIBRARIES SDL3::SDL3-static CACHE STRING "SDL3_LIBRARIES" FORCE)
    elseif(TARGET SDL3-shared)
        set(SDL3_LIBRARIES SDL3::SDL3-shared CACHE STRING "SDL3_LIBRARIES" FORCE)
    elseif(TARGET SDL3::SDL3)
        set(SDL3_LIBRARIES SDL3::SDL3 CACHE STRING "SDL3_LIBRARIES" FORCE)
    else()
        set(SDL3_LIBRARIES ${MENGINE_LIB_PREFIX}SDL3-static${MENGINE_LIB_SUFFIX} CACHE STRING "SDL3_LIBRARIES" FORCE)
    endif()
    
    set(SDL3_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/SDL3/include/include-config-$<LOWER_CASE:$<CONFIG>>" "${THIRDPARTY_CONFIG_DIR}/SDL3/include" "${THIRDPARTY_DIR}/SDL3/include" CACHE STRING "SDL3_INCLUDE_DIRS" FORCE)
    
    set(SDL3_LIBRARY ${SDL3_LIBRARIES} CACHE STRING "SDL3_LIBRARY" FORCE)
    set(SDL3_INCLUDE_DIR ${SDL3_INCLUDE_DIRS} CACHE STRING "SDL3_INCLUDE_DIR" FORCE)
endif()

if(MENGINE_DEPENDENCE_OPENAL_SOFT)
    message("================openal-soft================")
    
    if(MENGINE_TARGET_UWP)
        SET(ALSOFT_NO_UID_DEFS ON CACHE BOOL "Do not define GUIDs, IIDs, CLSIDs, or PropertyKeys" FORCE)
    else()
        SET(ALSOFT_NO_UID_DEFS OFF CACHE BOOL "Do not define GUIDs, IIDs, CLSIDs, or PropertyKeys" FORCE)
    endif()
    
    SET(ALSOFT_DLOPEN OFF CACHE BOOL "Check for the dlopen API for loading optional libs" FORCE)
    SET(ALSOFT_WERROR OFF CACHE BOOL "Treat compile warnings as errors" FORCE)
    SET(ALSOFT_UTILS OFF CACHE BOOL "Build and install utility programs" FORCE)
    SET(ALSOFT_NO_CONFIG_UTIL ON CACHE BOOL "Disable building the alsoft-config utility" FORCE)
    SET(ALSOFT_EXAMPLES OFF CACHE BOOL "Build and install example programs" FORCE)
    SET(ALSOFT_INSTALL OFF CACHE BOOL "Install main library" FORCE)
    SET(ALSOFT_INSTALL_CONFIG OFF CACHE BOOL "Install alsoft.conf sample configuration file" FORCE)
    SET(ALSOFT_INSTALL_HRTF_DATA OFF CACHE BOOL "Install HRTF data files" FORCE)
    SET(ALSOFT_INSTALL_AMBDEC_PRESETS OFF CACHE BOOL "Install AmbDec preset files" FORCE)
    SET(ALSOFT_INSTALL_EXAMPLES OFF CACHE BOOL "Install example programs (alplay, alstream, ...)" FORCE)
    SET(ALSOFT_INSTALL_UTILS OFF CACHE BOOL "Install utility programs (openal-info, alsoft-config, ...)" FORCE)
    SET(ALSOFT_UPDATE_BUILD_VERSION OFF CACHE BOOL "Update git build version info" FORCE)
    
    if(WIN32)
        SET(ALSOFT_EAX ON CACHE BOOL "Enable legacy EAX extensions" FORCE)
    else()
        SET(ALSOFT_EAX OFF CACHE BOOL "Enable legacy EAX extensions" FORCE)
    endif()
    
    SET(ALSOFT_BUILD_ROUTER OFF CACHE BOOL "Build the router (EXPERIMENTAL; creates OpenAL32.dll and soft_oal.dll)" FORCE)
    SET(ALSOFT_BUILD_IMPORT_LIB OFF CACHE BOOL "Build an import .lib using dlltool (requires sed)" FORCE)
    SET(ALSOFT_OSX_FRAMEWORK OFF CACHE BOOL "Build as macOS framework" FORCE)

    if(MENGINE_TOOLCHAIN_MSVC)
        SET(FORCE_STATIC_VCRT ${MENGINE_STATIC_CRT} CACHE BOOL "Force /MT for static VC runtimes" FORCE)
    else()
        SET(FORCE_STATIC_VCRT OFF CACHE BOOL "Force /MT for static VC runtimes" FORCE)
    endif()
    
    SET(ALSOFT_STL_HARDENING "None" CACHE STRING "Specifies the level of C++ STL hardening. None, Performance, Debug" FORCE)
    SET(ALSOFT_ENABLE_MODULES OFF CACHE BOOL "Enable use of C++20 modules when supported" FORCE)
    
    SET(ALSOFT_STATIC_LIBGCC OFF CACHE BOOL "Force -static-libgcc for static GCC runtimes" FORCE)
    SET(ALSOFT_STATIC_STDCXX OFF CACHE BOOL "Static link libstdc++" FORCE)
    SET(ALSOFT_STATIC_WINPTHREAD OFF CACHE BOOL "Static link libwinpthread" FORCE)
    
    SET(ALSOFT_ENABLE_SSE2_CODEGEN ON CACHE BOOL "Enable SSE2 code generation instead of x87 for 32-bit targets." FORCE)
    SET(ALSOFT_EMBED_HRTF_DATA OFF CACHE BOOL "Embed the HRTF data files (increases library footprint)" FORCE)
    SET(ALSOFT_CPUEXT_SSE3 OFF CACHE BOOL "Enable SSE3 support" FORCE)
    SET(ALSOFT_CPUEXT_SSE4_1 OFF CACHE BOOL "Enable SSE4.1 support" FORCE)
    
    if(MENGINE_TARGET_ANDROID)
        SET(ALSOFT_REQUIRE_OPENSL ON CACHE BOOL "Require OpenSL backend" FORCE)
    endif()
    
    if(MENGINE_TARGET_ANDROID)
        SET(ALSOFT_BACKEND_WAVE ON CACHE BOOL "Enable Wave Writer backend" FORCE)
    else()
        SET(ALSOFT_BACKEND_WAVE OFF CACHE BOOL "Enable Wave Writer backend" FORCE)
    endif()
    
    if(MENGINE_TOOLCHAIN_MSVC)
        SET(ALSOFT_STATIC_WINPTHREAD ON CACHE BOOL "Static link libwinpthread" FORCE)
    endif()

    if(MENGINE_TOOLCHAIN_MINGW)
        SET(ALSOFT_STATIC_WINPTHREAD OFF CACHE BOOL "Static link libwinpthread" FORCE)
    endif()
    
    SET(ALSOFT_BACKEND_WINMM OFF CACHE BOOL "Enable Windows Multimedia backend" FORCE)
    SET(ALSOFT_BACKEND_DSOUND OFF CACHE BOOL "Enable DirectSound backend" FORCE)
    SET(ALSOFT_BACKEND_WASAPI OFF CACHE BOOL "Enable WASAPI backend" FORCE)
    SET(ALSOFT_BACKEND_SDL2 OFF CACHE BOOL "Enable SDL2 backend" FORCE)
    SET(ALSOFT_REQUIRE_SDL2 OFF CACHE BOOL "Require SDL2 backend" FORCE)
    SET(ALSOFT_BACKEND_SDL3 OFF CACHE BOOL "Require SDL3 backend" FORCE)
    SET(ALSOFT_REQUIRE_SDL3 OFF CACHE BOOL "Require SDL3 backend" FORCE)
    
    if(MENGINE_TARGET_UWP)
        if(MENGINE_PLATFORM_SDL2)
            SET(ALSOFT_BACKEND_SDL2 ON CACHE BOOL "Enable SDL2 backend" FORCE)
            SET(ALSOFT_REQUIRE_SDL2 OFF CACHE BOOL "Require SDL2 backend" FORCE)
        endif()
        
        if(MENGINE_PLATFORM_SDL3)
            SET(ALSOFT_BACKEND_SDL3 ON CACHE BOOL "Enable SDL3 backend" FORCE)
            SET(ALSOFT_REQUIRE_SDL3 OFF CACHE BOOL "Require SDL3 backend" FORCE)
        endif()
    else()
        SET(ALSOFT_BACKEND_WINMM ON CACHE BOOL "Enable Windows Multimedia backend" FORCE)
        SET(ALSOFT_BACKEND_DSOUND ON CACHE BOOL "Enable DirectSound backend" FORCE)
        SET(ALSOFT_BACKEND_WASAPI ON CACHE BOOL "Enable WASAPI backend" FORCE)
    endif()
    
    if(MENGINE_TOOLCHAIN_MSVC)
        SET(LIBTYPE STATIC CACHE STRING "LIBTYPE" FORCE)
    endif()
        
    if(MENGINE_TARGET_ANDROID)
        SET(LIBTYPE SHARED CACHE STRING "LIBTYPE" FORCE)
    endif()
    
    if(MENGINE_TARGET_IOS)
        SET(LIBTYPE STATIC CACHE STRING "LIBTYPE" FORCE)
        SET(ALSOFT_STATIC_LIBGCC OFF CACHE BOOL "ALSOFT_STATIC_LIBGCC" FORCE)
    endif()
    
    if(MENGINE_TOOLCHAIN_MINGW)
        SET(LIBTYPE STATIC CACHE STRING "LIBTYPE" FORCE)
        SET(ALSOFT_STATIC_LIBGCC ON CACHE BOOL "ALSOFT_STATIC_LIBGCC" FORCE)
    endif()

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/openal-soft ${THIRDPARTY_CONFIG_DIR}/openal-soft)
endif()

if(MENGINE_DEPENDENCE_PYBIND)
    message("================pybind================")
    set(PYBIND_PROJECT_NAME "pybind" CACHE STRING "PYBIND_PROJECT_NAME" FORCE)
    set(PYBIND_EXTERNAL_BUILD ON CACHE BOOL "PYBIND_EXTERNAL_BUILD" FORCE)
    set(PYBIND_PYTHON_INCLUDE_PATH "${THIRDPARTY_DIR}/python" CACHE STRING "PYBIND_PYTHON_INCLUDE_PATH" FORCE)
    set(PYBIND_PYTHON_CONFIG_INCLUDE_PATH "${THIRDPARTY_CONFIG_DIR}/python" CACHE STRING "PYBIND_PYTHON_CONFIG_INCLUDE_PATH" FORCE)
    set(PYBIND_STDEX_INCLUDE_PATH "${THIRDPARTY_DIR}/stdex/include" CACHE STRING "PYBIND_STDEX_INCLUDE_PATH" FORCE)
    set(PYBIND_STL_NOT_SUPPORT ON CACHE BOOL "PYBIND_STL_NOT_SUPPORT" FORCE)
    set(PYBIND_PYTHON_VERSION "278" CACHE STRING "PYBIND_PYTHON_VERSION" FORCE)
    set(PYBIND_PYTHON_ERROR_FORMAT_FLAG ON CACHE BOOL "PYBIND_PYTHON_ERROR_FORMAT_FLAG" FORCE)
    set(PYBIND_INSTALL OFF CACHE BOOL "PYBIND_INSTALL" FORCE)
    set(PYBIND_SANDBOX OFF CACHE BOOL "PYBIND_SANDBOX" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/pybind ${THIRDPARTY_CONFIG_DIR}/pybind)
    add_dependencies(pybind_python python)
endif()

if(MENGINE_DEPENDENCE_IMGUI)
    message("================imgui================")
    ADD_SUBDIRECTORY(imgui ${THIRDPARTY_CONFIG_DIR}/imgui)
endif()

if(MENGINE_TARGET_WINDOWS)
    if(MENGINE_TOOLCHAIN_MSVC)
        if(MENGINE_DEPENDENCE_OPENSSL)
            message("================openssl================")
            
            set(WITH_APPS OFF CACHE BOOL "WITH_APPS" FORCE)
            set(MSVC_DYNAMIC_RUNTIME ${MENGINE_DYNAMIC_CRT} CACHE BOOL "MSVC_DYNAMIC_RUNTIME" FORCE)
            
            ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/openssl ${THIRDPARTY_CONFIG_DIR}/openssl)
            
            set(OPENSSL_ROOT_DIR ${THIRDPARTY_DIR}/openssl CACHE STRING "OPENSSL_ROOT_DIR" FORCE)
            set(OPENSSL_SSL_LIBRARIES ${THIRDPARTY_LIB_DIR} CACHE STRING "OPENSSL_SSL_LIBRARIES" FORCE)
            set(OPENSSL_SSL_LIBRARY ${OPENSSL_SSL_LIBRARIES} CACHE STRING "OPENSSL_SSL_LIBRARY" FORCE)
            set(OPENSSL_CRYPTO_LIBRARIES ${THIRDPARTY_LIB_DIR} CACHE STRING "OPENSSL_CRYPTO_LIBRARIES" FORCE)
            set(OPENSSL_CRYPTO_LIBRARY ${OPENSSL_CRYPTO_LIBRARIES} CACHE STRING "OPENSSL_CRYPTO_LIBRARY" FORCE)
            set(OPENSSL_LIBDIR ${THIRDPARTY_LIB_DIR} CACHE STRING "OPENSSL_LIBDIR" FORCE)
            set(OPENSSL_LIBRARIES libssl_1_1.a libcrypto_1_1.a CACHE STRING "OPENSSL_LIBRARIES" FORCE)
            set(OPENSSL_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/openssl/include" CACHE STRING "OPENSSL_INCLUDE_DIRS" FORCE)
            set(OPENSSL_INCLUDE_DIR ${OPENSSL_INCLUDE_DIRS} CACHE STRING "OPENSSL_INCLUDE_DIR" FORCE)
            set(OPENSSL_USE_STATIC_LIBS ON CACHE BOOL "OPENSSL_USE_STATIC_LIBS" FORCE)
            
            message("OPENSSL_ROOT_DIR: ${OPENSSL_ROOT_DIR}")
            message("OPENSSL_SSL_LIBRARIES: ${OPENSSL_SSL_LIBRARIES}")
            message("OPENSSL_CRYPTO_LIBRARIES: ${OPENSSL_CRYPTO_LIBRARIES}")
            message("OPENSSL_LIBDIR: ${OPENSSL_LIBDIR}")
            message("OPENSSL_LIBRARIES: ${OPENSSL_LIBRARIES}")
            message("OPENSSL_INCLUDE_DIRS: ${OPENSSL_INCLUDE_DIRS}")
            message("OPENSSL_USE_STATIC_LIBS: ${OPENSSL_USE_STATIC_LIBS}")
        endif()
    endif()
    
    if(MENGINE_DEPENDENCE_GLAD)
        message("================glad================")
        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/glad/cmake ${THIRDPARTY_CONFIG_DIR}/glad)
        
        set(GG_LOCATION "${THIRDPARTY_CONFIG_DIR}/glad_gl_core_33/" CACHE STRING "GG_LOCATION" FORCE)
        glad_add_library(glad_gl_core_33 STATIC API gl:core=3.3)
    endif()
    
    if(MENGINE_DEPENDENCE_GLFW3)
        message("================glfw3================")
        set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "GLFW_BUILD_EXAMPLES" FORCE)
        set(GLFW_BUILD_TESTS OFF CACHE BOOL "GLFW_BUILD_TESTS" FORCE)
        set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW_BUILD_DOCS" FORCE)
        set(GLFW_INSTAL OFF CACHE BOOL "GLFW_INSTAL" FORCE)
        set(GLFW_VULKAN_STATIC OFF CACHE BOOL "GLFW_VULKAN_STATIC" FORCE)
        set(USE_MSVC_RUNTIME_LIBRARY_DLL ${MENGINE_DYNAMIC_CRT} CACHE BOOL "USE_MSVC_RUNTIME_LIBRARY_DLL" FORCE)

        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/glfw3 ${THIRDPARTY_CONFIG_DIR}/glfw3)
    endif()
endif()

message("============@@##COMPLETE##@@============")